gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue20627.d
version https://git-lfs.github.com/spec/v1
oid sha256:0e8ffff3f50eac59290ca050789cc2a2731a715a2bb790ac478156318dd9a417
size 2009
